<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/medium_space">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_restaurant"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            android:src="@drawable/restaurant_sample"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/favorite_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_space"
            android:src="@drawable/ic_favorite_unselected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/restaurant_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            app:layout_constraintTop_toBottomOf="@+id/image_view_restaurant"
            card_view:cardCornerRadius="4dp"
            card_view:elevation="@dimen/medium_space">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small_space"
                android:layout_marginStart="@dimen/medium_space"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurantName">

                <TextView
                    android:id="@+id/restaurantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/medium_space"
                    android:layout_marginTop="@dimen/medium_space"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_restaurant"
                    tools:text="Kebab" />

                <TextView
                    android:id="@+id/restaurantStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:text="Closed" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_name_card"
            card_view:cardCornerRadius="4dp"
            card_view:elevation="@dimen/small_space">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/best_match"
                        tools:text="Best match: " />

                    <TextView
                        android:id="@+id/bestMatch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/newest"
                        tools:text="Newset: " />

                    <TextView
                        android:id="@+id/newest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/average_rating"
                        tools:text="Average Rating: " />

                    <TextView
                        android:id="@+id/average_rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/distance"
                        tools:text="Distance: " />

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/popularity"
                        tools:text="Popularity: " />

                    <TextView
                        android:id="@+id/popularity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/average_product_price"
                        tools:text="Best match: " />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/delivery_cost"
                        tools:text="Delivery Cost: " />

                    <TextView
                        android:id="@+id/delivery_cost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        android:text="@string/min_cost"
                        tools:text="Min Cost: " />

                    <TextView
                        android:id="@+id/min_cost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_margin="@dimen/large_space"
                        android:layout_weight="1"
                        tools:text="1000" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>